css height issue on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -110,5 +110,6 @@ section {
 	nav {
 		border-right: none;
 		border-bottom: 1px solid;
+		min-height: auto;
 	}
 }
